# ContextRelay

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  automate_engineer.py
api/: package-lock.json  package.json  wrangler.toml
api/src/: index.ts
examples/: agent_a_claude.py  agent_b_mistral.py  pubsub_demo.py  requirements.txt  test.py
prisma/: schema.prisma
python/: PUBLISHING.md  pyproject.toml  requirements.txt
python/contextrelay/: __init__.py  agent_bridge.py  bridge_cli.py  client.py  mcp.py
python/contextrelay/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
