[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextrelay"
version = "0.2.0"
description = "Zero-friction shared memory for multi-agent AI systems. Pass URL pointers instead of token-expensive blobs."
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Hashim", email = "hashim.cmd@gmail.com" }
]
keywords = ["ai", "agents", "llm", "context", "cloudflare", "multi-agent", "shared-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "mcp>=1.0.0",
    "websocket-client>=1.7.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpretty>=1.1.4",
]
langchain = [
    "langchain>=0.1",
]
crewai = [
    "crewai>=0.1",
]
autogen = [
    "autogen-agentchat>=0.2",
]

[project.scripts]
contextrelay-mcp    = "contextrelay.mcp:main"
contextrelay-bridge = "contextrelay.bridge_cli:main"

[project.urls]
Homepage = "https://github.com/cmhashim/contextrelay"
Repository = "https://github.com/cmhashim/contextrelay"
Issues = "https://github.com/cmhashim/contextrelay/issues"

[tool.hatch.build.targets.wheel]
packages = ["contextrelay"]

[tool.hatch.build.targets.wheel.exclude]
"__pycache__" = "*"
"*.pyc" = "*"
"test*" = "*"
